<resources>
    <string name="app_name">Lapper</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="member_login">Member Login</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password required</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="logout">Logout</string>
    <string name="live_data">Live data</string>
    <string name="pending_races">Pending races</string>
    <string name="active_races">Active races</string>
    <string name="inprogress_races">In progress races</string>
    <string name="completed_races">Completed races</string>
    <string name="canceled_races">Canceled races</string>
    <string name="vehicles">Vehicles</string>
    <string name="sensors">Sensors</string>
    <string name="users">Users</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="exit_application">Exit application?</string>
    <string name="cancel_exit">Cancel</string>
    <string name="race">Race:</string>
    <string name="sector">Sector:</string>
    <string name="race_start">START</string>
    <string name="no_race_in_progress">There isn\'t any race in progress</string>
    <string name="refresh">Refresh</string>
    <string name="unable_to_connect">Unable to connect to API Server</string>
    <string name="lap">Lap</string>
    <string name="lap_interval">Lap interval</string>
    <string name="the_race">Race</string>
    <string name="has_been_started">has been started</string>
    <string name="no_sensors">There are no sensors</string>
    <string name="threshold">Threshold</string>
    <string name="updated">Updated</string>
    <string name="add">Add</string>
    <string name="add_sensor">Add new sensor</string>
    <string name="required_field">This field is required</string>
    <string name="sensor_create_failed">Sensor creation failed</string>
    <string name="sensor_create_success">Sensor created successfully</string>
    <string name="edit_sensor">Edit sensor</string>
    <string name="delete_sensor_title">Delete sensor</string>
    <string name="delete_sensor_message">Do you want to delete the selected sensor?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="administrator">Administrator</string>
    <string name="normal_user">Normal user</string>
    <string name="no_users">There are no users</string>
    <string name="delete_user_title">Delete user</string>
    <string name="delete_user_message">Do you want to delete the selected user?</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email">E-mail</string>
    <string name="add_user">Add user</string>
    <string name="edit_user">Edit user</string>
    <string name="active">Active</string>
    <string name="starter_sensor">Starter sensor</string>
    <string name="date_joined">Created</string>
    <string name="reset_password_title">Reset password</string>
    <string name="new_password">New password</string>
    <string name="no_empty_password">Password can\'t be empty</string>
    <string name="password_reset_success">The password has been changed</string>
    <string name="driver">Driver</string>
    <string name="delete_vehicle_title">Delete vehicle</string>
    <string name="delete_vehicle_message">Do you want to delete the selected vehicle?</string>
    <string name="tag">Tag</string>
    <string name="owner">Owner</string>
    <string name="add_vehicle">Add new vehicle</string>
    <string name="edit_vehicle">Edit vehicle</string>
    <string name="description">Description</string>
    <string name="no_pending_races">No pending races</string>
    <string name="activator">Activator</string>
    <string name="start_method">Start method</string>
    <string name="laps">Laps</string>
    <string name="delete_race_title">Delete race</string>
    <string name="delete_race_message">Do you want to delete the selected race?</string>
    <string name="race_activated">Race activated successfully!</string>
    <string name="activate_race_title">Activate race</string>
    <string name="activate_race_text">Race %1$s has been activated</string>
    <string name="deactivate_race_title">Deactivate race</string>
    <string name="deactivate_race_text">Race %1$s has been deactivated</string>
    <string name="start_race_title">Start race</string>
    <string name="start_race_text">Race %1$s has been started!</string>
    <string name="add_race">Add new race</string>
    <string name="edit_race">Edit race</string>
    <string name="start_method_auto">Auto</string>
    <string name="start_method_manual">Manual</string>
    <string name="race_mode_both">Sensor and vehicle</string>
    <string name="race_mode_sensor">Sensor only</string>
    <string name="race_mode_vehicle">Vehicle only</string>
    <string name="race_vehicles">Race %1$s vehicles</string>
    <string name="no_vehicles">No vehicles</string>
    <string name="delete">Delete</string>
    <string name="activate">Activate</string>
    <string name="edit">Edit</string>
    <string name="start_race">Start race</string>
    <string name="deactivate">Deactivate</string>
    <string name="no_active_races">No active races</string>
    <string name="activate_race_confirm_message">Do you want to activate race %1$s?</string>
    <string name="deactivate_race_confirm_message">Do you want to deactivate race %1$s?</string>
    <string name="race_deactivated">Race activated successfully!</string>
    <string name="race_started">Race %1$s has been started!</string>
    <string name="select_vehicle">Select vehicle</string>
    <string name="no_completed_races">No completed races</string>
    <string name="duration">Duration</string>
    <string name="no_canceled_races">No canceled races</string>
    <string name="cancel_race">Cancel race</string>
    <string name="cancel_race_title">Cancel race</string>
    <string name="cancel_race_confirm_message">Do you want to cancel race %1$s?</string>
    <string name="race_canceled">Race canceled successfully!</string>
    <string name="start">Start at</string>
    <string name="best_time">Best time</string>
    <string name="best_lap_interval">Best lap</string>
    <string name="cancel_vehicle_title">Cancel vehicle</string>
    <string name="cancel_vehicle_confirm_message">Do you want to cancel vehicle %1$s from race %2$s?</string>
    <string name="vehicle_canceled">Vehicle %1$s has been canceled!</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="no_checkpoints">No checkpoints</string>
    <string name="checkpoints_title">%1$s (%2$s)</string>


</resources>
