<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="gr.artibet.lapper.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/vehiclesFragment"
        android:name="gr.artibet.lapper.fragments.VehiclesFragment"
        android:label="@string/vehicles"
        tools:layout="@layout/fragment_vehicles" />
    <fragment
        android:id="@+id/sensorsFragment"
        android:name="gr.artibet.lapper.fragments.SensorsFragment"
        android:label="@string/sensors"
        tools:layout="@layout/fragment_sensors" />
    <fragment
        android:id="@+id/usersFragment"
        android:name="gr.artibet.lapper.fragments.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users" />
    <fragment
        android:id="@+id/pendingRacesFragment"
        android:name="gr.artibet.lapper.fragments.PendingRacesFragment"
        android:label="@string/pending_races"
        tools:layout="@layout/fragment_pending_races" />
    <fragment
        android:id="@+id/activeRacesFragment"
        android:name="gr.artibet.lapper.fragments.ActiveRacesFragment"
        android:label="@string/active_races"
        tools:layout="@layout/fragment_active_races" />
    <fragment
        android:id="@+id/inProgressRacesFragment"
        android:name="gr.artibet.lapper.fragments.InProgressRacesFragment"
        android:label="@string/inprogress_races"
        tools:layout="@layout/fragment_in_progress_races" />
    <fragment
        android:id="@+id/completedRacesFragment"
        android:name="gr.artibet.lapper.fragments.CompletedRacesFragment"
        android:label="@string/completed_races"
        tools:layout="@layout/fragment_completed_races" />
    <fragment
        android:id="@+id/canceledRacesFragment"
        android:name="gr.artibet.lapper.fragments.CanceledRacesFragment"
        android:label="@string/canceled_races"
        tools:layout="@layout/fragment_canceled_races" />
</navigation>