<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        android:iconTint="#2196f3"/>

    <item
        android:id="@+id/item_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="#f44336"/>

    <item
        android:id="@+id/item_vehicles"
        android:title="@string/vehicles"
        android:icon="@drawable/ic_vehicle"
        android:iconTint="#3f51b5"/>

    <item
        android:id="@+id/item_activate"
        android:title="@string/activate"
        android:icon="@drawable/ic_active_races"
        android:iconTint="#4caf50"/>
</menu>
