<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />

    <item android:title="Menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_more_white"
        >

        <menu>

            <item
                android:id="@+id/action_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"/>

            <item
                android:id="@+id/action_exit"
                android:title="@string/exit"
                android:icon="@drawable/ic_exit" />
        </menu>
    </item>


</menu>