<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="gr.artibet.lapper.activities.LoginActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:layout_marginTop="60dp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_login"
            android:textSize="24sp"
            android:layout_marginTop="60dp" >
        </TextView>


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:hint="@string/username"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:imeOptions="actionNext">
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="10dp"
            android:imeOptions="actionNext">
        </EditText>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:background="#1565C0"
            android:textColor="#ffffffff">
        </Button>

    </LinearLayout>

</ScrollView>