<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/form_toolbar_layout" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicle_tag_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicle_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/vehicle_owner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicle_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/owner"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicle_driver_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicle_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/driver"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Switch
                    android:id="@+id/vehicle_isactive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="@string/active" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>







